# spear

./: .gitignore  .gitmodules  Cargo.toml  LICENSE  README.md  copy_test_binaries.sh  flake.nix  rust-toolchain.toml  shell.nix
.github/workflows/: rust.yaml
example/: hello.S  link.lds
nix/: spike.nix
src/: address.rs  cpu.rs  device.rs  emulator.rs  extensions.rs  instruction.rs  lib.rs  main.rs  memory.rs  mmu.rs  trap.rs
src/device/: ram.rs
src/extensions/: rv32i.rs  zicsr.rs
src/extensions/rv32i/: exec.rs  parse.rs
src/extensions/zicsr/: registers.rs
src/instruction/: fmt.rs  macros.rs  parse.rs
src/memory/: traits.rs
tests/: copy_test_binaries.sh  instructions.rs  list.c  parse.rs  riscv-tests.rs  rv32mi-p.rs  rv32ui-p.rs  rv32ui.rs
tests/binaries/: rv32ui-p-add  rv32ui-p-addi  rv32ui-p-and  rv32ui-p-andi  rv32ui-p-auipc  rv32ui-p-beq  rv32ui-p-bge  rv32ui-p-bgeu  rv32ui-p-blt  rv32ui-p-bltu  rv32ui-p-bne  rv32ui-p-fence_i  rv32ui-p-jal  rv32ui-p-jalr  rv32ui-p-lb  rv32ui-p-lbu  rv32ui-p-lh  rv32ui-p-lhu  rv32ui-p-lui  rv32ui-p-lw  rv32ui-p-or  rv32ui-p-ori  rv32ui-p-sb  rv32ui-p-sh  rv32ui-p-simple  rv32ui-p-sll  rv32ui-p-slli  rv32ui-p-slt  rv32ui-p-slti  rv32ui-p-sltiu  rv32ui-p-sltu  rv32ui-p-sra  rv32ui-p-srai  rv32ui-p-srl  rv32ui-p-srli  rv32ui-p-sub  rv32ui-p-sw  rv32ui-p-xor  rv32ui-p-xori
tests/binaries/rv32mi-p/: rv32mi-p-breakpoint  rv32mi-p-csr  rv32mi-p-illegal  rv32mi-p-ma_addr  rv32mi-p-ma_fetch  rv32mi-p-mcsr  rv32mi-p-sbreak  rv32mi-p-scall  rv32mi-p-shamt
tests/binaries/rv32si-p/: rv32si-p-csr  rv32si-p-dirty  rv32si-p-wfi  (+3 more)
(+39 files in other folders)
