[package]
name = "spear"
license = "zlib"
version = "0.1.0"
authors = ["Justus K <justus.k@protonmail.com>"]
edition = "2018"

[dependencies]
bytemuck = "1.5"
tracing = "0.1"

[dependencies.tracing-subscriber]
version = "0.2"
default-features = false
features = ["fmt", "ansi"]

[package.metadata.nix]
# Toggle app flake output
app = true
# Toggle flake outputs that build (checks, package and app)
build = true
# Whether to copy built library to package output
library = false
